styles/Home.module.css
.main {
  max-width: 1024px;
  padding: 2rem 3rem 3rem 3rem;
  margin: 0 auto;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: left;
  align-items: flex-start;
  font-size: 0.8rem;
}

.title {
  text-align: center;
  letter-spacing: 0.5rem;
  font-size: 3vw;
  word-wrap: break-word; 
  padding-bottom: 4vh;
  margin: 0 0 1rem;
  border-bottom: 1px solid #222;
}
.title a {
  color: #888;
}
.title a:hover,
.title a:active,
.title a:focus {
  text-decoration: none;
}

@media (prefers-color-scheme: dark) {
  .card,
  .footer {
    border-color: #222;
  }
  .code {
    background: #111;
  }
  .logo img {
    filter: invert(1);
  }
}

.presentation img {
  float: left;
  margin: 0 1rem 1rem 0;
  width: 10rem;
  max-width: 30%;
  height: auto;
}

